[build-system]
requires = ["hatchling", "numpy", "Pillow", "scipy", "pandas",
            "scikit-image", "scikit-learn",
            "torch", "torchvision", "torchaudio", "matplotlib", "spacy"]
build-backend = "hatchling.build"
[project]
name = "simplemlutils"
version = "0.0.3"
authors = [
  { name="Alexandros Giavaras", email="a.giavaras@gmail.com" },
]
description = "Easy to use utilities for ml modeling."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/pockerman/mlutils"
"Bug Tracker" = "https://github.com/pockerman/mlutils/issues"